--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -23,9 +23,20 @@
       </mat-form-field>
     </div>
 
-    <div class="form">
+    <!-- <div class="form">
       <mat-form-field>
         <input matInput [(ngModel)]="data.text" name="text" [disabled]="true" required />
+      </mat-form-field>
+    </div> -->
+
+    <div class="form">
+      <mat-form-field>
+        <textarea matInput
+                cdkTextareaAutosize
+                #autosize="cdkTextareaAutosize"
+                cdkAutosizeMinRows="1"
+                cdkAutosizeMaxRows="5"
+                [(ngModel)]="data.text" name="text" [disabled]="true" required></textarea>
       </mat-form-field>
     </div>
 
