--- a/src/app/dialogs/objectdialog/objectdialog.component.css
+++ b/src/app/dialogs/objectdialog/objectdialog.component.css
@@ -21,3 +21,11 @@ h3{
 mat-form-field {
   width: 100%;
 }
+
+/* Otklanja sivu pozadinu sa dugmeta */
+button {
+  outline: none;
+}
+::ng-deep .mat-button-focus-overlay {
+  display: none;
+}
