--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -4,38 +4,38 @@
   <h3 mat-dialog-title *ngIf="flag == 3">Delete object: {{data.objectName}}</h3>
   <h3 mat-dialog-title *ngIf="flag == 4">{{data.objectName}} - object details:</h3>
   <form class="mat-dialog-content" #formControl="ngForm">
-<div class="form">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name = "objectIdRetail" [disabled]="flag==3 || flag==4" required/>
+    <input matInput placeholder = "ObjectIDRetail" [(ngModel)]="data.objectIdRetail" name = "objectIdRetail" [disabled]="flag==4" required/>
   </mat-form-field>
 </div>
-<div class="form">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==3|| flag==4" required/>
+    <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==4" required/>
   </mat-form-field>
 </div>
-<div class="form">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "Retailer" [(ngModel)]="data.retailer.retailerName" name = "retailer" [disabled]="flag==3|| flag==4" required/>
+    <input matInput placeholder = "Retailer" [(ngModel)]="data.retailer.retailerName" name = "retailer" [disabled]="flag==4" required/>
   </mat-form-field>
 </div>
-<div class="form">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==3|| flag==4" required/>
+    <input matInput placeholder = "ObjectFormat" [(ngModel)]="data.objectFormat" name = "objectFormat" [disabled]="flag==4" required/>
   </mat-form-field>
-  <div class="form">
+  <div class="form" *ngIf="flag!=4 && flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="flag==3|| flag==4" required/>
+      <input matInput placeholder = "ObjectName" [(ngModel)]="data.objectName" name = "objectName" [disabled]="true" required/>
     </mat-form-field>
   </div>
-  <div class="form">
+  <div class="form" *ngIf="flag!=4 && flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==3|| flag==4" required/>
+      <input matInput placeholder = "City" [(ngModel)]="data.city" name = "city" [disabled]="flag==4" required/>
     </mat-form-field>
   </div>
-  <div class="form">
+  <div class="form" *ngIf="flag!=4 && flag!=3">
     <mat-form-field>
-      <input matInput placeholder = "Address" [(ngModel)]="data.address" name = "address" [disabled]="flag==3|| flag==4" required/>
+      <input matInput placeholder = "Address" [(ngModel)]="data.address" name = "address" [disabled]="flag==4" required/>
     </mat-form-field>
   </div>
   <!--
@@ -64,7 +64,7 @@
     <input matInput placeholder = "Merchandiser" [(ngModel)]="data.merchandiser" name = "merchandiser" [disabled]="flag==3" required/>
   </mat-form-field>
 </div>-->
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <mat-select [(ngModel)]="data.kam" placeholder="KAM" name="KAM" required>
       <mat-option *ngFor="let user of users" [value]="user.username">
@@ -73,7 +73,7 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <mat-select [(ngModel)]="data.merchandiser" placeholder="Merchandiser" name="Merchandiser" required>
       <mat-option *ngFor="let user of users" [value]="user.username">
@@ -82,7 +82,7 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <mat-select [(ngModel)]="data.director" placeholder="Director" name="Director" required>
       <mat-option *ngFor="let user of users" [value]="user.username">
@@ -91,7 +91,7 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <mat-select [(ngModel)]="data.commercialist" placeholder="Commercialist" name="Commercialist" required>
       <mat-option *ngFor="let user of users" [value]="user.username">
@@ -100,7 +100,7 @@
     </mat-select>
   </mat-form-field>
 </div>
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <mat-select [(ngModel)]="data.supervisor" placeholder="Supervisor" name="Supervisor" required>
       <mat-option *ngFor="let user of users" [value]="user.username">
@@ -112,72 +112,72 @@
 
 
 
-<div class="form">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]="flag==3 || flag==4" required/>
+    <input matInput placeholder = "RequisitionDays" [(ngModel)]="data.requisitionDays" name = "requisitionDays" [disabled]=" flag==4" required/>
   </mat-form-field>
 </div>
-<div class="form" >
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays" name = "merchandiserRevisionDays" [disabled]="flag==3 || flag==4" required/>
+    <input matInput placeholder = "MerchandiserRevisionDays" [(ngModel)]="data.merchandiserRevisionDays" name = "merchandiserRevisionDays" [disabled]=" flag==4" required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM" name = "companyShelfSpaceM" [disabled]="flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent" name = "companyShelfSpacePercent" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd" name = "gainings12Mrsd" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent" name = "gainingsVs12mpercent" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber" name = "registersNumber" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name = "shelfSpaceM" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer" name = "wdpercentCustomer" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector" name = "wdpercentSector" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia" name = "wdpercentSerbia" [disabled]=" flag==4"  required/>
   </mat-form-field>
 </div>
 
-<div class="form" *ngIf="flag!=4">
+<div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
     <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule" [disabled]=" flag==4" required/>
   </mat-form-field>
