slova na dugmicmia

--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -68,9 +68,9 @@
             (showFinishButton)="enableFinishButton($event)"></app-position>
         <div class="margintop">
 
-            <button class="item2" (click)="addToStoreCheck()" *ngIf="showFinishButton && !resolveFeedbacks">Add To Store Check</button>
+            <button class="item2" (click)="addToStoreCheck()" *ngIf="showFinishButton && !resolveFeedbacks">Add to StoreCheck</button>
 
-            <button class="item2" (click)="exit()">Exit</button>
+            <button class="item2 slova" (click)="exit()">Exit</button>
 
         </div>
     </div>
