--- a/src/app/components/store-check-page/store-check-page.component.css
+++ b/src/app/components/store-check-page/store-check-page.component.css
@@ -298,11 +298,14 @@ td {
     cursor: pointer;
     width: 145px;
     height: 50px;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .item2:hover {
     background-color: #39ace7;
     color: #fff;
     transition: 0.3s;
+}
+.slova{
+    font-size: 20px;
 }
