--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -109,7 +109,7 @@ table{
   -webkit-hyphens: auto;
   hyphens: auto;
 
-  text-align: left;
+  text-align: center;
   margin-left: -17px;
 }
 
@@ -128,14 +128,14 @@ table{
   -webkit-hyphens: auto;
   hyphens: auto;
 
-  text-align: left;
+  text-align: center;
 }
 
 .mat-column-actions {
   word-wrap: break-word !important;
   white-space: unset !important;
-  flex: 0 0 40% !important;
-  width: 40% !important;
+  flex: 0 0 50% !important;
+  width: 50% !important;
   overflow-wrap: break-word;
   word-wrap: break-word;
 
@@ -148,14 +148,13 @@ table{
 
   text-align: left;
 
-  margin-right: 5px;
-  margin-left:-10px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 300px) {
   .mat-column-actions{
     margin-left:-20px;
-    flex: 0 0 45% !important;
-  width: 45% !important;
+    flex: 0 0 55% !important;
+  width: 55% !important;
+ 
   }
 }
