--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -50,11 +50,12 @@ button[disabled]:hover {
 
 .browseFile{
   color: white;
-  width: 100px;
-  height: 20px;
+  width: 10px;
+  height: 10px;
   border-radius: 21.5px;
-  background-color: #56baed;
+  background-color: white;
   padding: 8px 16px;
+  margin: 40%;
 }
 
 /* Otklanja sivu pozadinu sa dugmeta */
