--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.html
@@ -43,7 +43,7 @@
     <form [formGroup]="form" *ngIf="resolveFeedbacks" (ngSubmit)="submitForm()">
       <input id="inputFile" type="file" (change)="uploadFile($event)" accept="image/*" capture="camera" fromControlName="file"  required hidden>
       <label>Take photo:</label>
-      <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" /></label>
+      <label for="inputFile" class="browseFile"> <img src="assets\photoicon.png" width="10%" height="10%" alt="PhotoIcon"/></label>
       <!-- <button mat-button>Resolve</button> -->
     </form>
     <div *ngIf="imageUploaded">
