--- a/src/app/components/choose-object/choose-object.component.css
+++ b/src/app/components/choose-object/choose-object.component.css
@@ -11,7 +11,7 @@
 }
 
 .main h4 {
-    color: grey;;
+    color: grey;
 }
 
 .main .search-input {
@@ -63,7 +63,7 @@
 .btn-finish {
     border-radius: 20px;
     border: 2px solid #39ace7;
-    background-color: #39ace7;;
+    background-color: #39ace7;
     color: #fff;
     width: 200px;
     padding: 10px 0;
