--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -48,8 +48,9 @@
       </ng-container>
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
-        (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username,row.imgResolve)">
+      <!-- <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"
+        (click)="openDialog(3,row.feedbackCategoryName,row.text,row.date,row.resolved,row.img,row.username,row.imgResolve)"> -->
+      <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns" (click)="openDialog(3, row)">
       </mat-row>
     </mat-table>
     <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white;">
