--- a/src/app/components/adminpage/adminpage.component.css
+++ b/src/app/components/adminpage/adminpage.component.css
@@ -202,33 +202,29 @@ a {
     opacity: 1;
   }
 }
-
-<<<<<<< HEAD
+/*
 @keyframes fadeIn {
   from {
     opacity: 0;
-=======
   .fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
     margin-top: 10%;
 
->>>>>>> 1c57cf9697c22cc264731b3ebda41869efb42cf5
   }
 
   to {
     opacity: 1;
   }
 }
-
+*/
 .fadeIn {
   opacity: 0;
   -webkit-animation: fadeIn ease-in 1;
   -moz-animation: fadeIn ease-in 1;
   animation: fadeIn ease-in 1;
 
-<<<<<<< HEAD
   -webkit-animation-fill-mode: forwards;
   -moz-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
@@ -237,7 +233,6 @@ a {
   -moz-animation-duration: 1s;
   animation-duration: 1s;
 }
-=======
   .heading{
     text-align:center;
     color:#56baed;
@@ -252,7 +247,6 @@ a {
     text-align:center;
   }
 
->>>>>>> 1c57cf9697c22cc264731b3ebda41869efb42cf5
 
 .fadeIn.first {
   -webkit-animation-delay: 0.4s;
@@ -280,7 +274,6 @@ a {
   animation-delay: 1s;
 }
 
-<<<<<<< HEAD
 
 .heading {
   text-align: center;
@@ -348,23 +341,3 @@ a {
   color: #fff;
   line-height: 100px;
 }
-=======
-  .analytics2 {
-      margin-left: 80%;
-    }
-    .menu{
-      display:inline;
-      float:right;
-      margin-top: 20px;
-    }
-
-
-
-  .header {
-    text-align: center;
-    height: 100px;
-    background-color: #56baed;
-    color: #fff;
-    line-height: 100px;
-  }
->>>>>>> 1c57cf9697c22cc264731b3ebda41869efb42cf5
