--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -3,31 +3,33 @@
 }
 
 
-#editBtn{
-    margin: 20px;
+#editBtn {
+  margin: 20px;
 }
-.font{
+
+.font {
   font-family: sans-serif;
 }
+
 .button {
 
-    color: white;
-    background-color: blue;
-    padding: 4px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    border-radius: 2px;
-  }
+  color: white;
+  background-color: blue;
+  padding: 4px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 2px;
+}
 
 
 
 
-  .header {
+.header {
   text-align: center;
   height: 100px;
   background-color: #56baed;
@@ -38,7 +40,7 @@
 
 
 
-.item2{
+.item2 {
   background-color: white;
   color: #39ace7;
   width: 140px;
@@ -66,30 +68,30 @@
 }
 
 
-  ul.links {
-    padding-bottom: 10px;
-  }
+ul.links {
+  padding-bottom: 10px;
+}
 
-  .table-row {
-    height: 30px !important;
-  }
+.table-row {
+  height: 30px !important;
+}
 
- 
+
 
 mat-cell:nth-child(1),
 mat-header-cell:nth-child(1) {
-    flex: 0 0 30%;
+  flex: 0 0 30%;
 }
 
 mat-cell:nth-child(5),
 mat-header-cell:nth-child(5) {
-    flex: 0 0 10%;
+  flex: 0 0 10%;
 }
 
 
 
 .fadeInDown {
-  font-family:sans-serif;
+  font-family: sans-serif;
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
   -webkit-animation-duration: 1s;
@@ -104,6 +106,7 @@ mat-header-cell:nth-child(5) {
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -117,6 +120,7 @@ mat-header-cell:nth-child(5) {
     -webkit-transform: translate3d(0, -100%, 0);
     transform: translate3d(0, -100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
@@ -125,23 +129,49 @@ mat-header-cell:nth-child(5) {
 }
 
 /* Simple CSS3 Fade-in Animation */
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .fadeIn {
-  opacity:0;
-  -webkit-animation:fadeIn ease-in 1;
-  -moz-animation:fadeIn ease-in 1;
-  animation:fadeIn ease-in 1;
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+  -moz-animation: fadeIn ease-in 1;
+  animation: fadeIn ease-in 1;
 
-  -webkit-animation-fill-mode:forwards;
-  -moz-animation-fill-mode:forwards;
-  animation-fill-mode:forwards;
+  -webkit-animation-fill-mode: forwards;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 
-  -webkit-animation-duration:1s;
-  -moz-animation-duration:1s;
-  animation-duration:1s;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 .fadeIn.first {
@@ -169,30 +199,30 @@ mat-header-cell:nth-child(5) {
 }
 
 
-.heading{
-  text-align:center;
-  color:#56baed;
-  margin:3%
+.heading {
+  text-align: center;
+  color: #56baed;
+  margin: 3%
 }
 
-.mainHeading{
-  text-align:center;
-  color:#56baed;
+.mainHeading {
+  text-align: center;
+  color: #56baed;
 
 }
 
-.uploadHeading{
-  text-align:center;
-  color:#56baed;
+.uploadHeading {
+  text-align: center;
+  color: #56baed;
 }
 
-.browseButton{
-  background-color:#56baed;
-  width:50px;
+.browseButton {
+  background-color: #56baed;
+  width: 50px;
   display: inline-block;
 }
 
-.analytics2{
+.analytics2 {
   font-size: large;
   margin-right: 5%;
   margin-left: 70%;
@@ -210,13 +240,13 @@ mat-header-cell:nth-child(5) {
   }
 }
 
-.mat-spinner-color::ng-deep circle{
+.mat-spinner-color::ng-deep circle {
   stroke: #56baed !important;
-  }
+}
 
 
-  
-    
+
+
 .mat-column-date {
   word-wrap: break-word !important;
   white-space: unset !important;
