spinneri smanjeni u feedback add i resolve, u object dialogu retaileri popravljeni

--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.css
@@ -12,6 +12,9 @@
   flex-grow: 1;
 }
 
+.mat-spinner-color::ng-deep circle {
+  stroke: #56baed !important;
+}
 
 .item2 {
   background-color: white;
