--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -43,7 +43,7 @@
 
             <div *ngIf="isLoading"
             style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
-            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate">
+            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
             </mat-progress-spinner>
           </div>
 
