--- a/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
+++ b/src/app/dialogs/feedbackdialog/feedbackdialog.component.css
@@ -49,6 +49,10 @@ button[disabled]:hover {
  cursor: not-allowed;
 }
 
+.mat-spinner-color::ng-deep circle {
+  stroke: #56baed !important;
+}
+
 .browseFile{
   color: white;
   width: 10px;
