--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -14,9 +14,15 @@
     <input matInput placeholder = "ObjectIDCompany" [(ngModel)]="data.objectIdCompany" name = "objectIdCompany" [disabled]="flag==4" required/>
   </mat-form-field>
 </div>
-<div class="form" *ngIf="flag!=4 && flag!=3">
+<div class="form">
   <mat-form-field>
-    <input matInput placeholder = "Retailer" [(ngModel)]="data.retailer.retailerName" name = "retailer" [disabled]="flag==4" required/>
+    <mat-select [(ngModel)]="data.retailer" placeholder="Retailer" name="Retailer" required>
+
+        <mat-option *ngFor="let retailer of retailers" [value]="retailer.retailerName">
+          {{ retailer.retailerName }}
+        </mat-option>
+
+    </mat-select>
   </mat-form-field>
 </div>
 <div class="form" *ngIf="flag!=4 && flag!=3">
