--- a/src/app/dialogs/position-dialog/position-dialog.component.html
+++ b/src/app/dialogs/position-dialog/position-dialog.component.html
@@ -27,7 +27,7 @@
         <div mat-dialog-actions>
             <button class="item2" mat-button *ngIf="flag == 1" type="submit" (click)="add()"
                 [disabled]="!formControl.valid">Ok</button>
-            <button mat-button *ngIf="flag == 2" type="submit" (click)="delete()">Delete</button>
+            <button mat-button class="item2" *ngIf="flag == 2" type="submit" (click)="delete()">Delete</button>
             <button mat-button class="item2" (click)="close()">Cancel</button>
         </div>
     </form>
