--- a/src/app/components/object/object.component.css
+++ b/src/app/components/object/object.component.css
@@ -89,13 +89,18 @@ table{
   width: 100%;
  }
 
+ .noDataMessage{
+  background-color: white;
+  color:#56baed;
+ }
+
 .mat-column-objectName {
   word-wrap: break-word !important;
   white-space: unset !important;
   flex: 0 0 15% !important;
   width: 15% !important;
   overflow-wrap: break-word;
- 
+
 
   word-break: break-word;
 
@@ -114,7 +119,7 @@ table{
   flex: 0 0 30% !important;
   width: 30% !important;
   overflow-wrap: break-word;
-  
+
 
   word-break: break-word;
 
@@ -132,7 +137,7 @@ table{
   flex: 0 0 50% !important;
   width: 50% !important;
   overflow-wrap: break-word;
- 
+
 
   word-break: break-word;
 
@@ -150,7 +155,7 @@ table{
     margin-left:-20px;
     flex: 0 0 55% !important;
      width: 55% !important;
- 
+
   }
 }
 
