--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -64,7 +64,7 @@
     </mat-progress-spinner>
   </div>
 
-  <mat-toolbar color="primary" *ngIf="noData">No records found message</mat-toolbar>
+  <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No objects.</mat-toolbar>
 
   <div class="detail-search">
     <h4>Detail search</h4>
