--- a/src/app/components/retailer/retailer.component.html
+++ b/src/app/components/retailer/retailer.component.html
@@ -45,5 +45,6 @@
    mode="indeterminate">
  </mat-progress-spinner>
 </div>
+<mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No retailers.</mat-toolbar>
 </div>
 
