--- a/src/app/components/store-check/store-check.component.css
+++ b/src/app/components/store-check/store-check.component.css
@@ -13,6 +13,11 @@ a {
     text-decoration: none;
 }
 
+.noDataMessage{
+  background-color: white;
+  color:#56baed;
+ }
+
 .menu {
     background-color: #fff;
     padding-top: 50px;
@@ -33,8 +38,8 @@ a {
     border: 2px solid #39ace7;
     cursor: pointer;
     margin: auto;
-  
-    
+
+
 }
 
 .item2{
@@ -54,7 +59,7 @@ a {
 
     /*
     margin-bottom: 1%;
-    
+
     margin-left: 50%;
     margin-right: 50%;*/
 
@@ -78,7 +83,7 @@ a {
 
 
   /* ANIMATIONS */
-  
+
   /* Simple CSS3 Fade-in-down Animation */
   .fadeInDown {
     font-family:sans-serif;
@@ -89,7 +94,7 @@ a {
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
   }
-  
+
   @-webkit-keyframes fadeInDown {
     0% {
       opacity: 0;
@@ -102,7 +107,7 @@ a {
       transform: none;
     }
   }
-  
+
   @keyframes fadeInDown {
     0% {
       opacity: 0;
@@ -115,43 +120,42 @@ a {
       transform: none;
     }
   }
-  
+
   /* Simple CSS3 Fade-in Animation */
   @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
   @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
   @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-  
+
   .fadeIn {
     opacity:0;
     -webkit-animation:fadeIn ease-in 1;
     -moz-animation:fadeIn ease-in 1;
     animation:fadeIn ease-in 1;
-  
+
     -webkit-animation-fill-mode:forwards;
     -moz-animation-fill-mode:forwards;
     animation-fill-mode:forwards;
-  
+
     -webkit-animation-duration:1s;
     -moz-animation-duration:1s;
     animation-duration:1s;
   }
-  
+
   .fadeIn.first {
     -webkit-animation-delay: 0.4s;
     -moz-animation-delay: 0.4s;
     animation-delay: 0.4s;
   }
-  
+
   .fadeIn.second {
     -webkit-animation-delay: 0.6s;
     -moz-animation-delay: 0.6s;
     animation-delay: 0.6s;
   }
-  
+
   .fadeIn.third {
     -webkit-animation-delay: 0.8s;
     -moz-animation-delay: 0.8s;
     animation-delay: 0.8s;
   }
-  
- 
+
