--- a/src/app/components/position/position.component.css
+++ b/src/app/components/position/position.component.css
@@ -7,6 +7,12 @@ h1{
     text-align: center;
     margin-top: 40px;
 }
+
+.noDataMessage{
+  background-color: white;
+  color:#56baed;
+ }
+
 #editBtn{
     margin: 20px;
 }
@@ -39,7 +45,7 @@ h1{
     stroke: #56baed !important;
     }
 
-    
+
 .mat-column-posClassName {
   word-wrap: break-word !important;
   white-space: unset !important;
