--- a/src/app/components/resolved-feedback/resolved-feedback.component.css
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.css
@@ -26,7 +26,10 @@
   border-radius: 2px;
 }
 
-
+.noDataMessage{
+  background-color: white;
+  color:#56baed;
+ }
 
 
 .header {
@@ -290,7 +293,7 @@ mat-header-cell:nth-child(5) {
   flex: 0 0 35% !important;
   width: 35% !important;
   overflow-wrap: break-word;
- 
+
 
   word-break: break-word;
 
