--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -69,5 +69,6 @@
      mode="indeterminate">
    </mat-progress-spinner>
   </div>
+  <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No users.</mat-toolbar>
   </div>
 </div>
