--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -105,61 +105,61 @@
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM" name = "companyShelfSpaceM" [disabled]="flag==4"  required/>
+    <input matInput placeholder = "CompanyShelfSpaceM" [(ngModel)]="data.objectInfo.companyShelfSpaceM" name = "companyShelfSpaceM" [disabled]="flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent" name = "companyShelfSpacePercent" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "CompanyShelfSpacePercent" [(ngModel)]="data.objectInfo.companyShelfSpacePercent" name = "companyShelfSpacePercent" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd" name = "gainings12Mrsd" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "Gainings12Mrsd" [(ngModel)]="data.objectInfo.gainings12Mrsd" name = "gainings12Mrsd" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent" name = "gainingsVs12mpercent" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "GainingsVs12Mpercent" [(ngModel)]="data.objectInfo.gainingsVs12mpercent" name = "gainingsVs12mpercent" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber" name = "registersNumber" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "RegistersNumber" [(ngModel)]="data.objectInfo.registersNumber" name = "registersNumber" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name = "shelfSpaceM" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "ShelfSpaceM" [(ngModel)]="data.objectInfo.shelfSpaceM" name = "shelfSpaceM" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer" name = "wdpercentCustomer" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "WDpercentCustomer" [(ngModel)]="data.objectInfo.wdpercentCustomer" name = "wdpercentCustomer" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector" name = "wdpercentSector" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "WDpercentSector" [(ngModel)]="data.objectInfo.wdpercentSector" name = "wdpercentSector" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia" name = "wdpercentSerbia" [disabled]=" flag==4"  required/>
+    <input matInput placeholder = "WDpercentSerbia" [(ngModel)]="data.objectInfo.wdpercentSerbia" name = "wdpercentSerbia" [disabled]=" flag==4" />
   </mat-form-field>
 </div>
 
 <div class="form" *ngIf="flag!=4 && flag!=3">
   <mat-form-field>
-    <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule" [disabled]=" flag==4" required/>
+    <input matInput placeholder = "AssortmentModule" [(ngModel)]="data.objectInfo.assortmentModule" name = "assortmentModule" [disabled]=" flag==4"/>
   </mat-form-field>
 </div>
 </div>
