podesena duzina teksta za feedback

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -1,6 +1,6 @@
 <div class="fadeInDown">
     <div class="header fadeIn first">
-        <h1>Choose Object</h1>
+        <h1>Search Object</h1>
     </div>
 
     <div class="main fadeIn second">
