--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -3,7 +3,10 @@
     <div class="header fadeIn first">
         <div class="head">
             <h1>{{ objectName }}</h1>
-            <em class="fa-solid fa-file-pdf fa-3x" (click)="getRetailerPlanogram()"></em>
+            <!-- <em class="fa-solid fa-file-pdf fa-3x" (click)="getRetailerPlanogram()"></em> -->
+            <!-- <em class="fa-solid fa-file fa-3x" (click)="getRetailerPlanogram()"></em> -->
+            <!-- <em class="fa-solid fa-file-lines fa-3x" (click)="getRetailerPlanogram()"></em> -->
+            <em class="fa-solid fa-file-powerpoint fa-3x" (click)="getRetailerPlanogram()"></em>
         </div>
         <div class="object-info-data" *ngIf="showDetails == true">
             <div class="obj-info">
