--- a/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
+++ b/src/app/dialogs/feedback-create-dialog/feedback-create-dialog.component.html
@@ -20,8 +20,9 @@
                 cdkTextareaAutosize
                 #autosize="cdkTextareaAutosize"
                 cdkAutosizeMinRows="1"
-                cdkAutosizeMaxRows="5"
+                cdkAutosizeMaxRows="10"
                 placeholder="Type text..."
+                maxlength="2000"
                 [(ngModel)]="feedback.text" name="text" required></textarea>
       </mat-form-field>
     </div>
