senke za dugmad

--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -40,7 +40,7 @@
         </div>
         <div class="menu-item">
           <mat-form-field>
-            <input type="text" matInput placeholder="Format" [(ngModel)]="format">
+            <input type="text" matInput placeholder="Baner" [(ngModel)]="format">
           </mat-form-field>
         </div>
         <div class="menu-btn">
