--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -4,7 +4,6 @@
         <div class="head">
             <h1>{{ objectName }}</h1>
             <!-- <em class="fa-solid fa-file-pdf fa-3x" (click)="getRetailerPlanogram()"></em> -->
-            <!-- <em class="fa-solid fa-file fa-3x" (click)="getRetailerPlanogram()"></em> -->
             <!-- <em class="fa-solid fa-file-lines fa-3x" (click)="getRetailerPlanogram()"></em> -->
             <em class="fa-solid fa-file-powerpoint fa-3x" (click)="getRetailerPlanogram()"></em>
         </div>
@@ -56,7 +55,7 @@
                 </table>
             </div>
         </div>
-        <h4>Details</h4>
+        <h4 *ngIf="showDetails == false">Details</h4>
         <em class="fa-solid fa-circle-chevron-down fa-1x" (click)="showObjectInfos()" *ngIf="showDetails == false"></em>
         <em class="fa-solid fa-circle-chevron-up fa-1x" (click)="showObjectInfos()" *ngIf="showDetails == true"></em>
     </div>
