--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -15,37 +15,44 @@
       <div class="detail-search-menu">
         <div class="menu-item">
           <mat-form-field>
-            <input type="text" matInput placeholder="Address" [(ngModel)]="address">
-          </mat-form-field>
-        </div>
-        <div class="menu-item">
-          <mat-form-field>
             <input type="text" matInput placeholder="Object name" [(ngModel)]="objectName">
           </mat-form-field>
         </div>
+
         <div class="menu-item">
           <mat-form-field>
-            <input type="text" matInput placeholder="Id company" [(ngModel)]="idCompany">
+            <input type="text" matInput placeholder="Address" [(ngModel)]="address">
           </mat-form-field>
         </div>
-        <div class="menu-item">
-          <mat-form-field>
-            <input type="text" matInput placeholder="Retailer" [(ngModel)]="retailer">
-          </mat-form-field>
-        </div>
+
         <div class="menu-item">
           <mat-form-field>
             <input type="text" matInput placeholder="City" [(ngModel)]="city">
           </mat-form-field>
         </div>
+        
+        <div class="menu-item">
+          <mat-form-field>
+            <input type="text" matInput placeholder="Id company" [(ngModel)]="idCompany">
+          </mat-form-field>
+        </div>
+
+        <div class="menu-item">
+          <mat-form-field>
+            <input type="text" matInput placeholder="Retailer" [(ngModel)]="retailer">
+          </mat-form-field>
+        </div>
+
         <div class="menu-item">
           <mat-form-field>
             <input type="text" matInput placeholder="Baner" [(ngModel)]="format">
           </mat-form-field>
         </div>
+
         <div class="menu-btn">
-          <button matSuffix mat-button (click)="loadData()">Search <mat-icon>search</mat-icon></button>
+          <button matSuffix mat-button (click)="loadData(false)">Search <mat-icon>search</mat-icon></button>
         </div>
+
       </div>
       <!-- <em class="fa-solid fa-circle-chevron-down fa-1x" (click)="showDetailSearch()" *ngIf="detailSearch == false"></em>
   <em class="fa-solid fa-circle-chevron-up fa-1x" (click)="showDetailSearch()" *ngIf="detailSearch == true"></em> -->
@@ -97,7 +104,7 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row style="cursor:pointer;" *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
-    <mat-paginator *ngIf="dataSource" [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)">
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)">
     </mat-paginator>
 
     <div *ngIf="isLoading"
