--- a/src/app/dialogs/email-dialog/email-dialog.component.css
+++ b/src/app/dialogs/email-dialog/email-dialog.component.css
@@ -1,23 +1,37 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    min-width: 450px;
-    }
-    
-  .form {
-    display: flex;
-    margin-bottom: 10px;
-  }
-    
-  .mat-form-field {
-    font-size: 16px;
-    flex-grow: 1;
-  }
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
 
-  .email-input {
-      border: none;
-      border-bottom: 1px solid #000;
-      font-size: 18px;
-      height: 30px;
-      margin-top: 15px;
-  }
+.form {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.mat-form-field {
+  font-size: 16px;
+  flex-grow: 1;
+}
+
+.email-input {
+  border: none;
+  border-bottom: 1px solid #000;
+  font-size: 18px;
+  height: 30px;
+  margin-top: 15px;
+}
+
+.item2 {
+  background-color: white;
+  color: #39ace7;
+  margin-bottom: 4%;
+  border: 2px solid #39ace7;
+  margin-left: 10px;
+}
+
+button:hover {
+  color: #fff;
+  background-color: #39ace7;
+  transition: 0.3s;
+}
