--- a/src/app/dialogs/email-dialog/email-dialog.component.html
+++ b/src/app/dialogs/email-dialog/email-dialog.component.html
@@ -17,13 +17,16 @@
         <div class="form">
             <mat-checkbox color="primary" [(ngModel)]="emailsForSending.marketing" name="marketing" (change)="onSelectionChanged($event, 'marketing')">Marketing</mat-checkbox>
         </div>
+
         <div class="form">
-            <input class="email-input" type="text" placeholder="Optional email" name="optionalEmail" [(ngModel)]="emailsForSending.optionalEmail">
-        </div>
+            <mat-form-field>
+              <input matInput type="email" placeholder="Optional email" name="optionalEmail" [(ngModel)]="emailsForSending.optionalEmail">
+            </mat-form-field>
+          </div>
 
         <div mat-dialog-action>
-            <button mat-button type="submit" [mat-dialog-close]="1" (click)="send()" [disabled]="!formControl.valid" [routerLink]="['/storeCheck']">Send</button>
-            <button mat-button (click)="close()">Close</button>
+            <button mat-button type="submit" (click)="send()" [disabled]="!formControl.valid" class="item2">Send</button>
+            <button mat-button (click)="close()" class="item2">Close</button>
         </div>
     </form>
 </div>
