--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -1,6 +1,6 @@
 <div class="fadeInDown">
     <div class="header fadeIn first">
-        <h1>Choose Object</h1>
+      <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="100" height="100" style="float:left">  <h1>Choose Object</h1>
     </div>
 
     <div class="main fadeIn second">
