--- a/src/app/dialogs/email-dialog/email-dialog.component.css
+++ b/src/app/dialogs/email-dialog/email-dialog.component.css
@@ -35,3 +35,7 @@ button:hover {
   background-color: #39ace7;
   transition: 0.3s;
 }
+
+.mat-spinner-color::ng-deep circle{
+  stroke: #56baed !important;
+  }
