--- a/src/app/dialogs/email-dialog/email-dialog.component.html
+++ b/src/app/dialogs/email-dialog/email-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h3 mat-dialog-title>Send store check to:</h3>
-  
+
     <form class="mat-dialog-content" #formControl="ngForm">
         <div class="form">
             <mat-checkbox color="primary" [checked]="emailsForSending.generalDirector" name="generalDirector" (change)="onSelectionChanged($event, 'generalDirector')">General director</mat-checkbox>
@@ -23,6 +23,14 @@
               <input matInput type="email" placeholder="Optional email" name="optionalEmail" [(ngModel)]="emailsForSending.optionalEmail">
             </mat-form-field>
           </div>
+
+          <div *ngIf="isLoading"
+          style="display: flex; justify-content: center; align-items: center; background: white;">
+         <mat-progress-spinner
+         class="mat-spinner-color"
+           mode="indeterminate">
+         </mat-progress-spinner>
+        </div>
 
         <div mat-dialog-action>
             <button mat-button type="submit" (click)="send()" [disabled]="!formControl.valid" class="item2">Send</button>
