--- a/src/app/components/adminpage/adminpage.component.css
+++ b/src/app/components/adminpage/adminpage.component.css
@@ -105,16 +105,18 @@
 .item2 {
   background-color: white;
   color: #39ace7;
-  width: 120px;
-  height: 50px;
+  width: 100px;
+  height: 35px;
   line-height: 50px;
   border-radius: 10px;
-  font-size: 25px;
+  font-size: 18px;
   border: 2px solid #39ace7;
   cursor: pointer;
   text-align: center;
   position: relative;
-  margin-right: 50px;
+  margin-right: 10px;
+  padding-bottom: 10px;
+
 }
 
 .item2:hover {
@@ -206,7 +208,7 @@ a {
 @keyframes fadeIn {
   from {
     opacity: 0;
-  
+
   }
 
   to {
@@ -229,9 +231,9 @@ a {
   -moz-animation-duration: 1s;
   animation-duration: 1s;
 }
- 
 
-  
+
+
   .l{
     display: flex;
     align-items: center;
