dodavanje store check receivera

--- a/src/app/components/adminpage/adminpage.component.html
+++ b/src/app/components/adminpage/adminpage.component.html
@@ -49,7 +49,10 @@
     <app-retailer></app-retailer>
   </div>
 
-
+  <div class="fadeIn third">
+    <h2 class="heading">Store Check Receivers</h2>
+    <app-store-check-receiver></app-store-check-receiver>
+  </div>
 
   <div class="fadeIn third">
     <h2 class="heading">Import Excel</h2>
